[gd_scene load_steps=6 format=3 uid="uid://bt14sma31yo57"]

[ext_resource type="PackedScene" uid="uid://cwr63aj5eu6of" path="res://player/player_oc_model.tscn" id="1_oul6g"]
[ext_resource type="Script" uid="uid://bg3kw43p0r6wb" path="res://player/player.gd" id="1_rkbax"]
[ext_resource type="AudioStream" uid="uid://u2c2jrwj0beq" path="res://sfx/jump.wav" id="3_yw30f"]
[ext_resource type="AudioStream" uid="uid://3hhn70rxnklj" path="res://sfx/steps-loop.wav" id="4_qjkh3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kqu6x"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_rkbax")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_kqu6x")

[node name="player_oc_model" parent="." instance=ExtResource("1_oul6g")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0, -1, 0)

[node name="rotation_ref" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)

[node name="sfx" type="Node3D" parent="."]

[node name="jump" type="AudioStreamPlayer3D" parent="sfx"]
stream = ExtResource("3_yw30f")

[node name="steps" type="AudioStreamPlayer3D" parent="sfx"]
stream = ExtResource("4_qjkh3")
volume_db = -80.0

[node name="camera_basis_y" type="Node3D" parent="."]
top_level = true

[node name="camera_basis_x" type="Node3D" parent="camera_basis_y"]

[node name="SpringArm3D" type="SpringArm3D" parent="camera_basis_y/camera_basis_x"]
transform = Transform3D(1, 0, 0, 0, 0.9659258, 0.25881904, 0, -0.25881904, 0.9659258, 0, 0.5, 0)
spring_length = 3.0
margin = 0.1

[node name="Camera3D" type="Camera3D" parent="camera_basis_y/camera_basis_x/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.96592593, -0.25881904, 0, 0.25881904, 0.96592593, 0, 0, 0)
doppler_tracking = 1
fov = 90.0
